syntax = "proto3";

option java_multiple_files = false;
option java_package = "com.ziapple.demo.grpc";
option java_outer_classname = "CashProto";

package cash;

service CashService {
  rpc dealCash (stream CashRequest) returns (CashReply) {};
}

message CashRequest {
  string user = 1;
  int32 money = 2;
}

message CashReply {
  string status = 1;
}